--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.11.5",
     "@mui/styled-engine-sc": "^5.11.0",
@@ -33,8 +35,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "autoprefixer": "^10.4.13",
     "babel-plugin-styled-components": "^2.0.7",
-    "hardhat": "^2.12.6"
+    "hardhat": "^2.12.6",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
