--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.1.4",
     "ipfs-http-client": "^60.0.0",
     "next": "13.1.4",
+    "next-base64": "^1.1.0",
     "pinata-ipfs-http-client": "^42.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
